menu fix on mobile

--- a/src/css/_scaffolding.scss
+++ b/src/css/_scaffolding.scss
@@ -49,6 +49,13 @@ h1,h2,.bold{
   font-family: 'FrutigerNext LT Bold';
 }
 
+button{
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
 .btn{
   background-color: transparent;
   border: 2px solid white;
